Correct faulty css in form preview field and therefore correct edit form on mobile view

--- a/static/css/page-edit.less
+++ b/static/css/page-edit.less
@@ -160,7 +160,7 @@ div.adminDelete {
       }
     }
     textarea {
-      width: 906px;
+      width: 100%;
       height: 500px;
     }
     .formElement.pagetype,
